oya/quality-management/iac/k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oya-quality-management
  labels:
    app: oya-quality-management
    sap-code: "QM"
spec:
  replicas: 3
  selector:
    matchLabels:
      app: oya-quality-management
  template:
    metadata:
      labels:
        app: oya-quality-management
    spec:
      containers:
        - name: service
          image: registry.example/oya-quality-management:0.1.0
          ports:
            - name: h3
              containerPort: 8443
